--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,6 @@
 {
   "name": "shelfswap",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -10,7 +9,16 @@
   "author": "Lauren Wu",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongodb": "^6.8.0"
-  }
+    "express-session": "^1.18.0",
+    "google-auth-library": "^9.11.0",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
+  },
+  "keywords": [],
+  "description": ""
 }
